--- a/main.css
+++ b/main.css
@@ -75,26 +75,30 @@ h2 {
 }
 
 .product-details {
-  margin-top: -8px;
-  border: 2px solid #1a1a1a36;
+  margin-top: -5px;
+  border: 1px solid #000000;
   display: flex;
   font-weight: 500;
   width: 100%;
-  height: 100px;
+  height: 70px;
 }
 
 .product-details img {
-  width: 70px;
-  height: 70px;
-  margin: 20px;
+  margin-top: 10px;
+  margin-left: 10px;
+  width: 50px;
+  height: 50px;
 }
 
 .extra-details {
-  margin: 30px;
+  margin-left: 30px;
+  margin-top: -15px;
+
 
 }
 
 .extra-details .input-group {
+ 
   display: flex;
   align-items: center;
   /* Выравниваем элементы по центру по вертикали */
@@ -117,10 +121,7 @@ h2 {
   padding: 5px;
 
   border: none;
-  /* Удаляем стандартные границы */
-  border-radius: 5px;
-  /* Добавляем скругления к границам */
-  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.15);
+  border-bottom: 1px solid #000000;
   /* Добавляем небольшую тень вокруг поля ввода */
   font-size: 14px;
   /* Устанавливаем размер шрифта */
@@ -151,19 +152,19 @@ h2 {
 }
 
 #selectPaymentBtn {
-  border: none;
-  border-radius: 2px;
+  border-radius: 0px;
+  border-bottom: 1px solid #000000;
   height: 30px;
   background-color: #fefefe;
   width: 270px;
-  color: #0f0f0f;
+  color: #525252;
   font-weight: 500;
   text-align: left;
   margin-left: 5px;
 }
 
 .ooo {
-  margin-top: -20px;
+  margin-top: -10px;
 }
 
 #checkoutBtn {
@@ -220,9 +221,9 @@ button {
   /* Размер текста */
   font-weight: bold;
   /* Сделать текст жирным */
-  color: #fff;
+  color: #1f1f1f;
   /* Цвет текста */
-  background-color: #FE3A4A;
+  background-color: #ffffff;
   /* Фоновый цвет */
 }
 
@@ -288,9 +289,19 @@ button {
   padding: 5px;
   transition: 1s;
   background: linear-gradient(45deg, #FE3A4A, #FF512F);
-  /* Добавьте эту строку */
+  /* Добавьте эти строки */
+  opacity: 0; /* Начальная прозрачность */
+  animation: fadeEffect 1s forwards; /* Применение анимации */
 }
 
+@keyframes fadeEffect {
+  0% {
+    opacity: 0; /* Начальная прозрачность */
+  }
+  100% {
+    opacity: 1; /* Завершающая прозрачность */
+  }
+}
 .product img {
   max-width: 100%;
   height: auto;
@@ -308,7 +319,7 @@ button {
 
 @media (max-width: 768px) {
   .product {
-    padding: 15px;
+    
     background-color: #ffffff;
     /* Добавьте фон */
     width: auto;
@@ -318,7 +329,7 @@ button {
     justify-content: space-between;
     /* It will push the Remove button to bottom */
     margin-top: 20px;
-    margin-left: 12px;
+    margin-left: 32px;
     flex-direction: row;
     /* Changed from column to row */
     align-items: center;
@@ -378,7 +389,9 @@ button {
 }
 
 .tovartext {
-  font-size: 18px;
+  margin-left: 10px;
+  margin-top: -12px;
+  font-size: 14px;
 }
 
 .tovartext1 {
@@ -401,9 +414,9 @@ button {
 }
 
 .info-block {
+  margin-left: 17px;
   display: flex;
   align-items: center;
-  margin-right: 20px;
   font-size: 11px;
   font-weight: 500;
 }
@@ -413,14 +426,13 @@ button {
 }
 
 .product button {
+  border: 1px solid #0f0f0f ;
+  border-radius: 0px;
+  font-weight: 500;
   display: inline-block;
-  background: linear-gradient(45deg, #FE3A4A, #FF512F);
+  background:#fefefe;
   /* Здесь задаем градиентный фон */
-  color: rgb(255, 255, 255);
-
-  font-weight: 900;
-  border: none;
-  border-radius: 5px;
+  color: rgb(27, 27, 27);
   text-align: center;
   text-decoration: none;
   display: inline-block;
@@ -430,21 +442,26 @@ button {
 
   width: 100%;
 }
-
+.category.heart-icon {
+  margin-top: 15px;
+  display: flex;
+  justify-content: center;
+}
 .bottomCart {
   font-size: 10px;
   visibility: hidden;
-  background-color: rgb(255, 255, 255);
+  background-color:#FE3A4A;
   transform: translateY(100%);
   transition: visibility 0s, transform 0.5s linear;
   position: fixed;
   height: 60px;
-  color: #000000;
+  color: #ffffff;
   bottom: 0;
   width: 100%;
   text-align: center;
   padding-top: 15px;
   padding-left: -5px;
+  cursor: pointer;
 }
 .bottomCart-show {
   visibility: visible;
