--- a/main.css
+++ b/main.css
@@ -1,8 +1,9 @@
 @media (max-width: 768px) {
   body {
     background-color: #ffffff;
-    font-family: 'Montserrat Alternates', sans-serif;
-    font-weight: 900;
+    font-family: 'Lato', sans-serif;
+font-family: 'Roboto Condensed', sans-serif;
+    font-weight: 500;
     text-transform: uppercase;
     margin: 0;
     padding: 0;
@@ -50,8 +51,9 @@
 }
 
 .boldMontserrat {
-  
-  font-family: 'Montserrat Alternates', sans-serif;
+ 
+  font-family: 'Lato', sans-serif;
+font-family: 'Roboto Condensed', sans-serif;
   font-weight: 500;
   height: 50px;
 }
@@ -67,7 +69,8 @@ h1 {
 }
 
 h2 {
-  font-weight: 900;
+  
+  font-weight: 700;
   text-transform: uppercase;
 }
 
@@ -103,35 +106,37 @@ h2 {
 }
 
 .extra-details .input-group {
- 
   display: flex;
   align-items: center;
-  /* Выравниваем элементы по центру по вертикали */
   gap: 10px;
-  /* Создаем некоторое пространство между изображением и полем ввода */
   margin-bottom: 10px;
-  width: 300px;
-  margin-left: 12px;
+  width: 315px;
+  margin-left: 0px;
 }
 
 #productModalContent {
-  width: 150px;
-  overflow: hidden;
-  /* Decrease the width */
+  width: 180px;
   display: flex;
+  display: flex;
+  flex-wrap: wrap;
+  grid-gap: 10px;
+  padding: 20px;
+  overflow: auto;
+  height: 1000px;
+  /* Decrease the width */
+  
 }
 
 .extra-details input {
   flex-grow: 1;
   /* Разрешаем полю ввода растягиваться, чтобы занять все свободное пространство */
   padding: 5px;
-
-  border: none;
   border-bottom: 1px solid #000000;
   /* Добавляем небольшую тень вокруг поля ввода */
   font-size: 14px;
   /* Устанавливаем размер шрифта */
-  font-family: 'Montserrat Alternates', sans-serif;
+ font-family: 'Lato', sans-serif;
+font-family: 'Roboto Condensed', sans-serif;
   /* Определяем семейство шрифтов */
 }
 #deliveryAddress.form-control {
@@ -149,7 +154,7 @@ h2 {
   gap: 10px;
   /* Создаем некоторое пространство между изображением и полем ввода */
   padding: 5px;
-  font-weight: 500;
+  font-weight: 700;
   width: 241px;
   border: none;
   /* Удаляем стандартные границы */
@@ -159,13 +164,16 @@ h2 {
   /* Добавляем небольшую тень вокруг поля ввода */
   font-size: 14px;
   /* Устанавливаем размер шрифта */
-  font-family: 'Montserrat Alternates', sans-serif;
+  font-family: 'Lato', sans-serif;
+font-family: 'Roboto Condensed', sans-serif;
   /* Определяем семейство шрифтов */
 }
 
 #selectPaymentBtn {
+  font-family: 'Lato', sans-serif;
+font-family: 'Roboto Condensed', sans-serif;
   border-radius: 0px;
-  border-bottom: 1px solid #000000;
+ 
   height: 30px;
   background-color: #fefefe;
   width: 270px;
@@ -180,11 +188,13 @@ h2 {
 }
 
 #checkoutBtn {
+    font-family: 'Lato', sans-serif;
+font-family: 'Roboto Condensed', sans-serif;
   cursor: pointer;
   border: none;
   background-color: #ffffff;
-  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.15);
-  border-radius: 20px;
+  border-radius: 0px;
+  border: 1px solid black;
   height: 30px;
   color: #0f0f0f;
   text-align: center;
@@ -195,7 +205,10 @@ h2 {
 }
 
 #addToOrderBtn {
+  font-family: 'Lato', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
   cursor: pointer;
+  font-weight: 500;
   border-bottom: 1px solid black;
   color: #000000;
   border: none;
@@ -262,7 +275,7 @@ button {
   padding: 0px;
   margin-top: -20px;
   background-color: #ffffff;
-  padding-left: 20px;
+  padding-left: 12px;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
   align-items: flex-start;
 
@@ -284,7 +297,8 @@ button {
 
 .category h2 {
   
-  font-family: 'Montserrat Alternates', sans-serif;
+  font-family: 'Lato', sans-serif;
+font-family: 'Roboto Condensed', sans-serif;
   font-weight: 500;
   color: rgb(34, 34, 34);
   cursor: pointer;
@@ -342,33 +356,27 @@ button {
 }
 
 .product h2 {
-
+ font-weight: 500;
   margin-left: 10px;
   font-size: 16px;
 }
 
 @media (max-width: 768px) {
   .product {
-    
+    height: 300px;
+    border-radius: 0px;
     background-color: #ffffff;
-    /* Добавьте фон */
-    /* Change here to make product width flexible */
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     /* It will push the Remove button to bottom */
     margin-top: 10px;
-    margin-left: 4px;
+    margin-left: 3px;
     flex-direction: row;
     /* Changed from column to row */
     align-items: center;
     /* Add this line */
     width: 170px;
-    border: none;
-    /* Вместо этой строки добавьте две следующие строки */
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.411);
-    /* Тень вокруг карточки */
-    border-radius: 20px;
     /* Углы карточки */
     font-weight: bold;
     cursor: pointer;
@@ -381,7 +389,7 @@ button {
   transform: translateY(-5px);
 }
 .product p {
-  font-weight: 500;
+  font-weight: 100;
   font-size: 1.0em;
   color: #292929;
   margin-left: 10px;
@@ -406,8 +414,8 @@ button {
 #productSection {
   display: block;
   z-index: 1;
-  margin-top: -50px;
-  margin-left: 16px;
+  margin-top: -15px;
+  margin-left: 10px;
   /* For center align */
   width: 100%;
   /* Change here */
@@ -463,22 +471,23 @@ button {
   margin-right: 10px;
 }
 
+
 .product button {
-  border: 1px solid #0f0f0f ;
+  /* Твои текущие стили кнопки */
+  width: 100%;
   border-radius: 0px;
+  margin-top: 5px;
   font-weight: 500;
   display: inline-block;
-  background:#ffffff;
-  /* Здесь задаем градиентный фон */
-  color: rgb(27, 27, 27);
+  border-left:1px solid #000000;
+  color: rgb(0, 0, 0);
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
   transition-duration: 0.4s;
   cursor: pointer;
-
-  width: 100%;
+ 
 }
 .category.heart-icon {
   margin-top: 15px;
@@ -487,14 +496,16 @@ button {
 }
 #cartTotalPrice{
   text-align: center;
-  margin-left: 125px;
-  font-size: 12px;
+  margin-left: 30px;
+  font-size: 16px;
+  border-left:1px solid black ;
+  padding-left: 10px;
   font-weight: 500;
 }
 .bottomCart {
   font-size: 10px;
   visibility: hidden;
-  background-color:#FE3A4A;
+  background-image: linear-gradient(to right, rgba(254, 58, 74, 0.8), rgba(254, 58, 74, 0.651), rgba(254, 58, 74, 0.8));
   transform: translateY(100%);
   transition: visibility 0s, transform 0.5s linear;
   position: fixed;
@@ -742,3 +753,50 @@ textarea {
   border-radius: 3px;
   border: 1px solid #ddd;
 }
+.polka0{
+  display: flex;
+}
+.polka{
+  display: flex;
+}
+.polka1{
+  display: flex;
+}
+.polka2{
+  display: flex;
+}
+.polka3{
+  display: flex;
+}
+.headup{
+  text-transform: lowercase;
+  height: 20px;
+  margin-left: 12px;
+  text-align: left;
+  margin-top: 40px;
+  font-weight: 700;
+  font-size: 20px;
+}
+.headup1{
+  text-transform: lowercase;
+  height: 1px;
+  margin-left: 12px;
+  text-align: left;
+  margin-top: -5px;
+  font-weight: 500;
+  font-size: 15px;
+}
+.mainmain{
+  background-image: linear-gradient(to right, rgba(254, 58, 74, 0.8), rgba(254, 58, 74, 0.4), rgba(254, 58, 74, 0.8));
+  text-transform: lowercase;
+  color: #ffffff;
+  padding-left: 10px;
+  margin-left: 12px;
+  border-top: 1px solid rgb(255, 255, 255);
+  border-bottom: 1px solid rgb(255, 255, 255);
+  padding-bottom: 10px;
+  padding-top: 6px;
+  width: 338px;
+  font-weight: 500;
+}
+
